working on figuring out the mock localStorage

--- a/app/templates/my_todo.html
+++ b/app/templates/my_todo.html
@@ -1,4 +1,5 @@
 <div class="jumbotron">
+  <div ng-init="syncTodoList()">
   <form role="form" ng-submit="submit()">
     <label for='todo_task'>Enter a Todo Task</label>
     <input name="todo_task" ng_model="newTodo">
